<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.rakshit.pets.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/overview"
            style="@style/CategoryStyle"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords"/>

            <EditText
                style="@style/EditorFieldStyle"
                android:hint="@string/breed"
                android:inputType="textCapWords"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/gender"
            style="@style/CategoryStyle"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"
                android:id="@+id/spinner"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/weight"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                style="@style/EditorFieldStyle"
                android:hint="@string/weight"
                android:inputType="number"/>

            <TextView
                style="@style/EditorUnitsStyle"
                android:text="kg"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
